cmake_minimum_required(VERSION 3.13)
set(CMAKE_CXX_STANDARD 20, C_STANDARD 89)
project(Aban VERSION 0.1.0)

set( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/bin" )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/bin" )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/bin" )

add_subdirectory(src)
